# sm-polarization-project

./: .dockerignore  .gitignore  README.md  api.py  config.py  docker-compose.yml  fetch_mastodon.py  main.py  pyproject.toml
.cursor/rules/: llm-cost-safety.mdc  python-conventions.mdc
db/: __init__.py  models.py  reads.py  session.py  views.py  writes.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: EmptyState.tsx  ErrorBoundary.tsx  GraphView.tsx  Spinner.tsx
frontend/src/pages/: Generate.tsx  Graph.tsx
infra/: llm.Dockerfile  pipeline.Dockerfile  run-llamafile.sh  start-llamafile.sh
pipeline/: argument_graph.py  claim_extraction.py  polarity_assignment.py  statement_generation.py  sub_topic_discovery.py  topic_clustering.py
pipeline/utils/: embeddings.py  llm.py  post_parsing.py
